source-code.css
/* ... */
body .tooltip-inner {
    border: none;
    box-shadow: 0px 1px 6px -1px var(--color-background-accent);
    padding: 12px 16px;
}

/* Modal */
body .modal-content {
    border: var(--border-standard);
}

/* Modal - header */
body .modal-header {
    border-bottom: var(--border-standard);
    padding: .6em 1em !important;
}
body #options-dialog .modal-header {
    border-bottom: none;
}
body .modal-header .close span {
    font-size: 0;
    text-shadow: unset;
}
body .modal-header .close:before {
    font-family: 'trilium-allure-icons';
    content: "\e652";
    font-weight: normal;
    text-shadow: unset;
}

/* Modal - body */
body #recent-changes-dialog .modal-dialog-scrollable .modal-body {
    overflow: auto;
}
body .form-control {
    border: var(--border-standard);
}
body .nav-tabs {
    border-bottom: unset;
    margin: -16px;
    padding: 10px 12px;
}
body .nav-tabs .nav-item.show .nav-link,
body .nav-tabs .nav-link.active {
    border: unset;
}
body .nav-tabs .nav-link {
    border: none;
    width: 100%;
    white-space: nowrap;
    padding: 6px 16px;
    margin: 4px 0;
}

/* Modal - footer */
body .modal-footer {
    border-top: var(--border-standard);
}

/* Note Revisions */
body .note-revisions-dialog .dropdown .note-revision-list {
    border: none;
    margin: 0;
    border-radius: 0;
    padding: 10px 12px;
    box-shadow: none;
}
body .note-revisions-dialog .dropdown .note-revision-list .dropdown-item {
    font-size: 14px;
    line-height: 1.2em;
    padding: 6px 12px;
    margin: 4px 0;
    border-radius: var(--border-radius-standard);
    border: none !important;
}
body .note-revision-title-buttons {
    font-size: 0;
}
body .note-revision-title-buttons button {
    border: none !important;
    padding: 2px 8px !important;
    margin: 0 4px;
}
body .note-revision-title-buttons button:before {
    font-family: 'trilium-allure-icons';
    font-size: 1.2rem;
}
body .note-revision-title-buttons button:first-of-type:before {
    content: "\e6a6";
}
body .note-revision-title-buttons button:nth-of-type(2):before {
    content: "\e60d";
}
body .note-revision-title-buttons button:nth-of-type(3):before {
    content: "\e682";
}
body #note-revision-list {
    margin: -16px;
    border-radius: 0;
    border: none;
    height: calc(100% + 32px) !important;
}
body #note-revision-content-wrapper {
    padding-left: 16px;
}
body #note-revision-content {
    padding-right: 4px;
    margin: 12px -16px -16px 0;
}
body .note-revisions-dialog .note-revision-content-wrapper > div {
    padding: 10px 16px;
}
body .note-revisions-dialog .note-revision-content-wrapper .note-revision-title {
    font-size: 1.2em;
    line-height: inherit;
}
body .note-revisions-dialog .note-revision-content-wrapper {
    margin-left: 0;
    margin-top: 12px;
}

/* Recent changes */
body #recent-changes-dialog ul {
    padding-left: 0;
}
body #recent-changes-dialog li {
    font-size: 0;
}
body #recent-changes-dialog li span {
    font-size: initial;
    margin-left: 16px;
}

/* Dropdown menu */
body .dropdown-menu {
    border: none;
    box-shadow: var(--shadow-mobile-popup);
}
body .dropdown-item {
    padding: .25rem 1.2rem;
    font-size: 14px;
}
body .dropdown-item .bx {
    vertical-align: middle;
    margin-right: -18px;
}
body .dropdown-item.active,
body .dropdown-menu a:hover:not(.disabled),
body .dropdown-item:hover:not(.disabled) {
    border: 1px solid transparent !important;
}
body .dropdown-divider {
    border: none;
    border-top: var(--border-standard);
}
body #context-menu-container .dropdown-item {
    padding: 0px 8px;
}
body #context-menu-container,
body #context-menu-container .dropdown-menu {
    padding: 12px 0;
}
body #context-menu-container .dropdown-submenu .dropdown-menu {
    border: var(--border-standard);
    margin-left: -2px;
}
body .editability-dropdown .dropdown-item div {
    color: inherit;
    font-style: italic;
}
body .dropdown-item .check {
    margin-left: 4px;
}
body .dropdown-item .bx-info-circle:before {
    content: "\e64a";
}

/* Toast */
body .toast {
    border: var(--border-standard);
}
body .toast .close {
    text-shadow: unset;
    font-weight: normal;
    margin: 0 !important;
}

/* Search in page */
/*
body .find-input,
body .find-matches,
body .find-case {
    border: none !important;
body .find-box .find-back,
body .find-box .find-forward,
}*/
body .find-box {
    box-shadow: none !important;
    border-radius: var(--border-radius-standard);
    top: 52px !important;
}
body .find-box .find-input {
    border: none !important;
}



/*---------------------------------------------------------------*/
/* LAUNCHER PANEL                                                */
/*---------------------------------------------------------------*/

body #launcher-pane {
    width: fit-content !important;
    padding: 12px 0;
}

body #launcher-pane > .spacer {
    display: none;
}
body #launcher-pane > .spacer ~ .spacer {
    display: block;
}
/*body .right-dropdown-widget {
    width: 40px;
    height: 40px;
}*/

/* icon */
body #launcher-pane .icon-action {
    font-size: 1.2em;
    width: unset;
    height: unset;
    padding: 8px;
    margin: 4px 8px 0px 8px;
}
body #launcher-pane .launcher-button {
    font-family: 'trilium-allure-icons' !important;
    font-size: 1.2em;
    padding: 8px;
    margin: 6px 8px;
    width: unset;
    height: unset;
    border-radius: var(--border-radius-middle);
}
body #launcher-pane .launcher-button.bx-check-shield {
    color: var(--code-blue);
}
body #launcher-pane .launcher-button:hover {
    background-color: var(--color-background-menu);
}
body #launcher-container .right-dropdown-widget {
    height: unset;
}
body #launcher-pane .button-widget.icon-action.bx.component.bx-chevrons-left,
body #launcher-pane .button-widget.icon-action.bx.component.bx-chevrons-right {
    margin-bottom: 8px;
}

/* hide button */
body #launcher-pane .bx-search,
body #launcher-pane .bx-send,
body #launcher-pane .bx-map-alt {
    display: none;
}
/* ... */

